test/scc_test/expr/semantic-errors/021.t
void test()
{
    void* a;
    +a;
}